--- a/app/src/main/res/layout/fragment_best_seller_book.xml
+++ b/app/src/main/res/layout/fragment_best_seller_book.xml
@@ -8,20 +8,24 @@
 
     <TextView
         android:id="@+id/ranking"
-        android:layout_width="200dp"
+        android:layout_width="20dp"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="5dp"
+        android:textSize="18sp"
         tools:text="1" />
 
     <ImageView
         android:id="@+id/book_image"
         android:layout_width="190dp"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="5dp"
         tools:srcCompat="@tools:sample/avatars" />
 
     <TextView
         android:id="@+id/book_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="5dp"
         android:textAppearance="?attr/textAppearanceListItem"
         android:textSize="18sp"
         android:textStyle="bold"
@@ -31,6 +35,7 @@
         android:id="@+id/book_author"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="5dp"
         android:textAppearance="?attr/textAppearanceListItem"
         tools:text="Elin Hilderbrand" />
 
@@ -38,11 +43,16 @@
         android:id="@+id/book_description"
         android:layout_width="190dp"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="5dp"
         tools:text="A relationship that started in 1993 between Mallory Blessing and Jake McCloud comes to lig..." />
 
     <Button
         android:id="@+id/buy_button"
-        android:layout_width="190dp"
+        android:layout_width="150dp"
         android:layout_height="wrap_content"
-        android:text="BUY ON AMAZON" />
+        android:layout_marginLeft="20dp"
+        android:background="#2196F3"
+        android:text="BUY ON AMAZON"
+        android:textColor="#FFFFFF"
+        android:textStyle="bold" />
 </LinearLayout>
