--- a/app/src/main/res/layout/fragment_best_seller_book.xml
+++ b/app/src/main/res/layout/fragment_best_seller_book.xml
@@ -1,35 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_margin="6dp"
     android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/ranking"
-        android:layout_width="20dp"
+    <RelativeLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="5dp"
-        android:textSize="18sp"
-        tools:text="1" />
+        android:layout_marginBottom="12dp"
+        android:orientation="horizontal">
 
-    <ImageView
-        android:id="@+id/book_image"
-        android:layout_width="190dp"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="5dp"
-        tools:srcCompat="@tools:sample/avatars" />
+        <TextView
+            android:id="@+id/ranking"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="@id/book_image"
+            android:fontFamily="serif"
+            android:textSize="22sp" />
+
+        <ImageView
+            android:id="@+id/book_image"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true" />
+    </RelativeLayout>
+
 
     <TextView
         android:id="@+id/book_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="5dp"
         android:textAppearance="?attr/textAppearanceListItem"
-        android:textSize="18sp"
-        android:textStyle="bold"
-        tools:text="SUMMERS" />
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/book_author"
@@ -41,18 +47,19 @@
 
     <TextView
         android:id="@+id/book_description"
-        android:layout_width="190dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="5dp"
-        tools:text="A relationship that started in 1993 between Mallory Blessing and Jake McCloud comes to lig..." />
+        android:layout_gravity="center_horizontal"
+        android:ellipsize="end"
+        android:fontFamily="sans-serif-light"
+        android:maxLines="5"
+        android:textAppearance="?attr/textAppearanceListItem" />
 
     <Button
         android:id="@+id/buy_button"
-        android:layout_width="150dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
-        android:background="#2196F3"
+        android:backgroundTint="#567b95"
         android:text="BUY ON AMAZON"
-        android:textColor="#FFFFFF"
-        android:textStyle="bold" />
+        android:textColor="@android:color/white" />
 </LinearLayout>
